# drone

./: .env.example  .gitignore  AGENTS.md  DECISIONS.md  Dockerfile  Makefile  README.md  docker-compose.offline.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
analysis/: __init__.py  behavior.py  cli.py  detector.py  embedding.py  events.py  flow.py  identity.py  ingest.py  irrational.py  orchestrator.py  pip.py  registry.py  situation.py  store.py  tiling.py  tracker.py
analysis/trackers/: botsort_drone.yaml
app/: main.py
app/core/: config.py
app/routers/: stream.py
app/static/: app.js  index.html  overlay.js  player.html  player.js  style.css
app/vision/: broadcast.py  detector.py  flow.py  offline.py  pip.py  pipeline.py  registry.py  situation.py  sources.py
app/vision/trackers/: botsort_drone.yaml
docs/: ARCHITECTURE.md  CONFIG.md  DEMO.md  OFFLINE.md
review/: __init__.py  annotations.py  comparison.py  config.py  debrief.py  hazard.py  main.py  operator_notes.py  routes.py
review/static/: app.js  index.html  style.css
scripts/: analyze_offline.py  eval_detection.py  fetch_visdrone.py  integration_check.py  make_demo_video.py  serve.sh  snapshot.py
tests/: test_analysis_behavior.py  test_analysis_flow.py  test_analysis_pip.py  test_analysis_registry.py  test_analysis_situation.py  test_analysis_tiling.py  test_annotations.py  test_api.py  test_behavior.py  test_comparison.py  test_config.py  test_debrief.py  test_embedding.py  test_events.py  test_flow.py  test_hazard.py  test_identity.py  test_ingest.py  test_irrational.py  test_main.py  test_offline.py  test_operator_notes.py  test_orchestrator.py  test_orchestrator_p3.py  test_orchestrator_p5.py  test_orchestrator_resume.py  test_pip.py  test_registry.py  test_review_api.py  test_situation.py  test_store.py  test_tiling.py
