[project]
name = "drone-insats-poc"
version = "0.1.0"
description = "PoC: realtidsanalys av drönarvideo för räddningstjänst (persondetektion, beteende, lägesbild)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "numpy>=1.26",
    "opencv-python-headless>=4.10",
    "ultralytics>=8.3",
    "lapx>=0.5.2",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = ["static/*", "vision/trackers/*.yaml"]
